docs: update HANDOFF.md — Plans 3-6 complete, Plan 6 is next